--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+  <!-- ✅ Alpha Logo on Top -->
+  <img src="logo.png" alt="Alpha Logo" style="display: block; margin: 40px auto 20px; max-width: 160px; border-radius: 12px; filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.3));" />
+
+  <!-- 👤 Candidate Info Input -->
   <div class="container" id="intro">
     <h2>Candidate Screening Quiz</h2>
     <p>Please fill your details to begin:</p>
@@ -16,6 +21,7 @@
     <button onclick="startQuiz()">Start Quiz</button>
   </div>
 
+  <!-- ❓ Quiz Question Box -->
   <div class="container" id="quiz" style="display: none;">
     <div id="question-box">
       <p id="question-text"></p>
@@ -25,11 +31,13 @@
     </div>
   </div>
 
+  <!-- ✅ Final Result -->
   <div class="container" id="result" style="display: none;">
     <h2>Quiz Completed</h2>
     <p id="result-message"></p>
   </div>
 
+  <!-- 📜 JS Logic -->
   <script src="quiz.js"></script>
 </body>
 </html>
