--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- ✅ Alpha Logo on Top -->
-  <img src="logo.png" alt="Alpha Logo" style="display: block; margin: 40px auto 20px; max-width: 160px; border-radius: 12px; filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.3));" />
+  <img src="Alpha.png" alt="Alpha Logo" style="display: block; margin: 40px auto 20px; max-width: 160px; border-radius: 12px; filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.3));" />
 
   <!-- 👤 Candidate Info Input -->
   <div class="container" id="intro">
