--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 </head>
 <body>
 
-  <!-- ✅ Alpha Logo on Top -->
-  <img src="Alpha.png" alt="Alpha Logo" style="display: block; margin: 40px auto 20px; max-width: 160px; border-radius: 12px; filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.3));" />
+  <!-- ✅ Centered Alpha Logo -->
+  <div style="text-align: center;">
+    <img src="Alpha.jpg" alt="Alpha Logo" style="
+      max-width: 160px;
+      border-radius: 12px;
+      filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.3));
+      margin: 40px auto 20px;
+      display: inline-block;
+      animation: logoFadeIn 1.2s ease-out;
+    " />
+  </div>
 
   <!-- 👤 Candidate Info Input -->
   <div class="container" id="intro">
