--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- ✅ Centered Alpha Logo -->
   <div style="text-align: center;">
-    <img src="Alpha.jpg" alt="Alpha Logo" style="
+    <img src="logo.png" alt="Alpha Logo" style="
       max-width: 160px;
       border-radius: 12px;
       filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.3));
