--- a/index.html
+++ b/index.html
@@ -8,17 +8,8 @@
 </head>
 <body>
 
-  <!-- ✅ Centered Alpha Logo -->
-  <div style="text-align: center;">
-    <img src="logo.png" alt="Alpha Logo" style="
-      max-width: 160px;
-      border-radius: 12px;
-      filter: drop-shadow(2px 2px 4px rgba(0,0,0,0.3));
-      margin: 40px auto 20px;
-      display: inline-block;
-      animation: logoFadeIn 1.2s ease-out;
-    " />
-  </div>
+  <!-- ✅ Centered Logo -->
+  <img src="logo.png" alt="Alpha Logo" class="logo-img" />
 
   <!-- 👤 Candidate Info Input -->
   <div class="container" id="intro">
