--- a/index.html
+++ b/index.html
@@ -3,42 +3,53 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Candidate Interview Quiz</title>
+  <title>Candidate Screening Quiz</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
   <div class="wrapper">
-    <!-- Alpha Logo -->
+
+    <!-- Logo -->
     <div class="logo-container">
       <img src="logo.png" alt="Alpha Logo" class="logo" />
     </div>
 
-    <!-- Quiz Intro -->
-    <div class="container" id="intro">
+    <!-- Intro / Details Form -->
+    <section class="container" id="intro">
       <h2>Candidate Screening Quiz</h2>
-      <p>Please fill your details to begin:</p>
+      <p>Please enter your details to begin:</p>
       <input type="text" id="fullName" placeholder="Full Name (as per passport)" required />
-      <input type="text" id="whatsapp" placeholder="WhatsApp Number" required />
-      <input type="text" id="passport" placeholder="Passport Number" required />
-      <button onclick="startQuiz()">Start Quiz</button>
-    </div>
+      <input type="tel"   id="whatsapp" placeholder="WhatsApp Number" required />
+      <input type="text"  id="passport" placeholder="Passport Number" required />
+      <button id="startBtn">Start Quiz</button>
+    </section>
 
-    <!-- Quiz Box -->
-    <div class="container" id="quiz" style="display: none;">
+    <!-- Quiz Section -->
+    <section class="container" id="quiz" hidden>
+      <div class="candidate-info">
+        <strong>Candidate:</strong> <span id="displayName"></span>
+      </div>
       <div id="question-box">
         <p id="question-text"></p>
         <div id="answer-options"></div>
-        <p id="timer" style="display: none;">⏳ Time left: <span id="time">10</span>s</p>
-        <button id="nextBtn" onclick="nextQuestion()" style="display: none;">Next</button>
+        <div id="timer" hidden>
+          ⏳ Time left: <span id="time">0</span>s
+        </div>
+        <button id="nextBtn" disabled>Next</button>
       </div>
-    </div>
+    </section>
 
-    <!-- Quiz Result -->
-    <div class="container" id="result" style="display: none;">
+    <!-- Result Section -->
+    <section class="container" id="result" hidden>
       <h2>Quiz Completed</h2>
+      <div class="result-header">
+        <p><strong>Candidate:</strong> <span id="resultName"></span></p>
+        <p><strong>Status:</strong> <span id="resultStatus"></span></p>
+      </div>
+      <p id="detailed-score"></p>
       <p id="result-message"></p>
-    </div>
+    </section>
+
   </div>
 
   <script src="quiz.js"></script>
