--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Intro / Details Form -->
     <section class="container" id="intro">
-      <h2>Candidate Screening Quiz</h2>
+      <h2 class="glitter-text">Candidate Screening Quiz</h2>
       <p>Please enter your details to begin:</p>
       <input type="text" id="fullName" placeholder="Full Name (as per passport)" required />
       <input type="tel"   id="whatsapp" placeholder="WhatsApp Number" required />
@@ -26,6 +26,7 @@
 
     <!-- Quiz Section -->
     <section class="container" id="quiz" hidden>
+      <h2 class="glitter-text">Quiz In Progress</h2>
       <div class="candidate-info">
         <strong>Candidate:</strong> <span id="displayName"></span>
       </div>
@@ -41,7 +42,7 @@
 
     <!-- Result Section -->
     <section class="container" id="result" hidden>
-      <h2>Quiz Completed</h2>
+      <h2 class="glitter-text">Quiz Completed</h2>
       <div class="result-header">
         <p><strong>Candidate:</strong> <span id="resultName"></span></p>
         <p><strong>Status:</strong> <span id="resultStatus"></span></p>
