--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="wrapper">
 
-    <!-- Logo -->
-    <div class="logo-container">
-      <img src="logo.png" alt="Alpha Logo" class="logo" />
-    </div>
+  <!-- Logo Header -->
+  <header class="logo-header">
+    <img src="logo-white.png" alt="Alpha Logo" class="logo" />
+  </header>
+
+  <div class="wrapper">
 
     <!-- Intro / Details Form -->
     <section class="container" id="intro">
