--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
   <!-- Logo Header -->
   <header class="logo-header">
-    <img src="logo-white.png" alt="Alpha Logo" class="logo" />
+    <img src="logo-white.png" alt="Alpha Logo" class="logo big-logo" />
   </header>
 
   <div class="wrapper">
 
     <!-- Intro / Details Form -->
     <section class="container" id="intro">
-      <h2 class="glitter-text">Candidate Screening Quiz</h2>
+      <h2>Candidate Screening Quiz</h2>
       <p>Please enter your details to begin:</p>
       <input type="text" id="fullName" placeholder="Full Name (as per passport)" required />
       <input type="tel"   id="whatsapp" placeholder="WhatsApp Number" required />
@@ -27,12 +27,12 @@
 
     <!-- Quiz Section -->
     <section class="container" id="quiz" hidden>
-      <h2 class="glitter-text">Quiz In Progress</h2>
+      <h2>Quiz In Progress</h2>
       <div class="candidate-info">
         <strong>Candidate:</strong> <span id="displayName"></span>
       </div>
       <div id="question-box">
-        <p id="question-text"></p>
+        <p id="question-text" class="shiny-text"></p>
         <div id="answer-options"></div>
         <div id="timer" hidden>
           ⏳ Time left: <span id="time">0</span>s
@@ -43,7 +43,7 @@
 
     <!-- Result Section -->
     <section class="container" id="result" hidden>
-      <h2 class="glitter-text">Quiz Completed</h2>
+      <h2>Quiz Completed</h2>
       <div class="result-header">
         <p><strong>Candidate:</strong> <span id="resultName"></span></p>
         <p><strong>Status:</strong> <span id="resultStatus"></span></p>
