--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-  <!-- Logo Header -->
-  <header class="logo-header">
-    <img src="logo-white.png" alt="Alpha Logo" class="logo big-logo" />
-  </header>
-
   <div class="wrapper">
+
+    <!-- Shouting Welcome -->
+    <div class="welcome-container">
+      <p class="scream-text">WELCOME TO ALPHA!!!</p>
+    </div>
 
     <!-- Intro / Details Form -->
     <section class="container" id="intro">
