--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Candidate Screening Quiz</title>
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -12,16 +12,16 @@
 
     <!-- Shouting Welcome -->
     <div class="welcome-container">
-      <p class="scream-text">WELCOME TO ALPHA!!!</p>
+      <p class="scream-text">🚀 WELCOME TO ALPHA!!! 🚀</p>
     </div>
 
     <!-- Intro / Details Form -->
     <section class="container" id="intro">
       <h2>Candidate Screening Quiz</h2>
       <p>Please enter your details to begin:</p>
-      <input type="text" id="fullName" placeholder="Full Name (as per passport)" required />
-      <input type="tel"   id="whatsapp" placeholder="WhatsApp Number" required />
-      <input type="text"  id="passport" placeholder="Passport Number" required />
+      <input type="text" id="fullName" placeholder="Full Name (as per passport)" />
+      <input type="tel"   id="whatsapp" placeholder="WhatsApp Number" />
+      <input type="text"  id="passport" placeholder="Passport Number" />
       <button id="startBtn">Start Quiz</button>
     </section>
 
@@ -54,6 +54,7 @@
 
   </div>
 
+  <!-- Your JS at the very end -->
   <script src="quiz.js"></script>
 </body>
 </html>
